--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       type="text/css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="animation.css" />
     <title>Number Game</title>
   </head>
   <body>
@@ -41,7 +42,22 @@
       >
         coded by sukyungdev
       </a>
+
+      <!-- animation -->
+      <div class="wrapper">
+        <div class="box">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
     </main>
+
     <script src="./app.js"></script>
   </body>
 </html>
