--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       type="text/css"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="animation.css" />
     <title>Number Game</title>
   </head>
   <body>
@@ -44,10 +43,8 @@
       </a>
 
       <!-- animation -->
-      <div class="wrapper">
+      <div class="wrapper" aria-hidden="true">
         <div class="box">
-          <div></div>
-          <div></div>
           <div></div>
           <div></div>
           <div></div>
