Fixed(NumberGame) : code Fixed.
HTML: 영문으로 번역.
CSS : animation 수정.
JS  : chance 부분 수정.

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
       type="text/css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Number Game</title>
+    <title>Number Guess Game</title>
   </head>
   <body>
     <main>
       <section>
-        <h1 class="title">Number Game</h1>
-        <p class="desc">숫자를 맞혀 보세요!</p>
+        <h1 class="title">Number Guess Game</h1>
+        <p class="desc">Try to guess the number!</p>
         <form action="#">
-          <label for="number-input" class="sr-only">숫자입력창</label>
+          <label for="number-input" class="sr-only">Number Input Area</label>
           <input
             type="number"
             required
-            placeholder="1부터 100까지의 숫자를 입력해주세요."
+            placeholder="Please input a number from 1 to 100."
             id="number-input"
           />
           <div class="btn-box">
@@ -30,8 +30,8 @@
             <button type="button" class="reset-btn btn">RESET</button>
           </div>
         </form>
-        <div class="result">결과가 이곳에 나타납니다!</div>
-        <p class="chance">남은 chance : 7</p>
+        <div class="result">You can watch result here!</div>
+        <p class="chance">chance : 7</p>
       </section>
       <a
         href="https://github.com/sukyungdev/NumberGame"
@@ -45,7 +45,6 @@
       <!-- animation -->
       <div class="wrapper" aria-hidden="true">
         <div class="box">
-          <div></div>
           <div></div>
           <div></div>
           <div></div>
