Fix(NumberGame) : fixed bug
chance관련 오작동 수정 완료(chance 영역에 -1이 나타나는 현상)
css animation 주석 처리

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </a>
 
       <!-- animation -->
-      <div class="wrapper" aria-hidden="true">
+      <!-- <div class="wrapper" aria-hidden="true">
         <div class="box">
           <div></div>
           <div></div>
@@ -51,7 +51,7 @@
           <div></div>
           <div></div>
         </div>
-      </div>
+      </div> -->
     </main>
 
     <script src="./app.js"></script>
